fixed some spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 .pair {
-  @apply w-full xs:w-10/12 xsm:w-2/3 md:w-1/2 lg:w-1/2 lg:max-w-xs xl:w-1/2 xxl:w-2/5;
+  @apply w-full xs:w-10/12 xsm:w-2/3 sm:max-w-xs md:w-1/2 lg:w-1/2 xl:w-1/2 xxl:w-2/5;
 }
 
 .page-scale {
